updated user and book admin service

--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 circulationService.url=http://10.15.1.7:8080/circulation/
-adminBookService.url=http://192.168.43.150/addbook
+adminBookService.url=http://10.15.0.182:8080/addbook
 adminUserService.url=http://10.15.0.182:8080/adduser
-paymentService.url=http
-reservationService.url=http://192.168.43.79:8080/reserve
+paymentService.url=http://10.15.1.42:8080/
+reservationService.url=http://10.15.1.211:8080/reserve
