--- a/circulation_service/src/main/resources/application.properties
+++ b/circulation_service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=127.0.0.1:9092
 
 
 spring.jpa.hibernate.ddl-auto=update
