--- a/BookAdminService/pom.xml
+++ b/BookAdminService/pom.xml
@@ -56,10 +56,16 @@
 		</dependency>
 		
 		<dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-jasper</artifactId>
-            <scope>provided</scope>
-        </dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+    <groupId>org.junit.platform</groupId>
+    <artifactId>junit-platform-runner</artifactId>
+    <scope>test</scope>
+</dependency>
         
 	</dependencies>
 
