--- a/reservation_service/bin/src/main/resources/application.properties
+++ b/reservation_service/bin/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.kafka.bootstrap-servers=localhost:9092
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/reservation_db
+spring.datasource.username=bedrock
+spring.datasource.password=Bedrock@G10X
+
 
