--- a/reservation_service/src/main/resources/application.properties
+++ b/reservation_service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=192.168.43.79:9092
 
 
 spring.jpa.hibernate.ddl-auto=update
